tried to fix img flicker

--- a/src/styles/components/Projects.scss
+++ b/src/styles/components/Projects.scss
@@ -123,7 +123,7 @@ p.chakra-text.project-description {
   margin: 0 6px 40px 0;
 }
 
-.node, .html, .css{
+.node, .html, .cssnpm{
   width: 18px;
   margin: 0 6px 44px 0;
 }
